# platform

./: .gitignore  .pre-commit-config.yaml  BOOKMARKS.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_SUMMARY.md  Makefile  PR_REVIEW_RESPONSE_PLAN.md  QUICK_START.md  README.md  REVIEW_RESPONSE.md  mkdocs.yml
components/runners/claude-code-runner/: Dockerfile  README.md  adapter.py  main.py  pyproject.toml
components/runners/claude-code-runner/ag_ui_claude_sdk/: __init__.py  adapter.py  handlers.py  utils.py
components/runners/claude-code-runner/ambient_runner/: AGENTS.md  README.md  __init__.py  app.py  bridge.py  observability.py
components/runners/claude-code-runner/ambient_runner/bridges/: __init__.py
components/runners/claude-code-runner/ambient_runner/endpoints/: __init__.py  capabilities.py  content.py  feedback.py  health.py  interrupt.py  mcp_status.py  repos.py  run.py  workflow.py
components/runners/claude-code-runner/ambient_runner/middleware/: __init__.py  developer_events.py  tracing.py
components/runners/claude-code-runner/ambient_runner/platform/: __init__.py  auth.py  utils.py  (+4 more)
components/runners/claude-code-runner/tests/: conftest.py  test_auto_push.py  test_bridge_claude.py  test_bridge_langgraph.py  test_capabilities_endpoint.py  test_claude_auth.py  test_corrections_tool.py  test_developer_events.py  test_duplicate_turn_prevention.py  test_e2e_api.py  test_google_drive_e2e.py  test_langfuse_model_metadata.py  test_mcp_auth.py  test_model_mapping.py  test_observability.py  test_privacy_masking.py  test_security_utils.py  test_tracing_middleware.py
(+120 files in other folders)
